# simpletron

./: Asem.txt  CMakeLists.txt  EXCUTE.c  Excute.c  FETCH&DECODE.c  Fetch&Decode.c  README.md  RECIVE_instructions.c  Recive_instructions.c  SML_exe.c  SML_exe.h  Simpletron_UI.c  Simpletron_UI.h  main.c  simp.cbp  simp.depend  simp.layout
